General changes in GameControllerTest